reset java version to 22